feat - drf_yasg, Swagger. Modified urls path to first page

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ click==8.1.7
 colorama==0.4.6
 Django==4.2.6
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 flake8==6.1.0
+inflection==0.5.1
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
@@ -15,5 +17,7 @@ pycodestyle==2.11.0
 pyflakes==3.1.0
 python-decouple==3.8
 pytz==2023.3.post1
+PyYAML==6.0.1
 sqlparse==0.4.4
 tzdata==2023.3
+uritemplate==4.1.1
